--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <link rel="preload" href="fonts/inter-v7-latin_cyrillic-600.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/inter-v7-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
 
+  <script defer src="js/js.js"></script>
+  <script defer src="js/goods.js"></script>
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/js.js" defer ></script>
+  
   <title>CMS</title>
 </head>
 
