--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="fonts/inter-v7-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
 
   <script defer src="js/js.js"></script>
-  <script defer src="js/goods.js"></script>
+  <!-- <script defer src="js/goods.js"></script> -->
   <link rel="stylesheet" href="css/index.css">
   
   <title>CMS</title>
